# str

./: .gitignore  README.md  pyproject.toml
.github/workflows/: critiques.yml  ingest.yml  quality.yml
corpus/: episodes.json
corpus/episodes/2026-07-01-cultivating-a-big-enough-worldview-in-students/: metadata.json
corpus/podcasts/idont-have-enough-faith/: episodes.json
corpus/podcasts/stand-to-reason/: episodes.json
docs/: CNAME  index.html  robots.txt  sitemap.xml
docs/assets/: app.js  styles.css
docs/episodes/2026-03-11-just-tell-them-the-truth/: index.html
docs/episodes/2026-03-13-reasons-for-and-against-converting-to-christianity/: index.html
docs/episodes/2026-03-18-wheres-the-proof-for-god/: index.html
docs/episodes/2026-03-20-what-happens-to-people-who-never-heard-the-gospel/: index.html
docs/episodes/2026-03-25-interview-jon-noyes-noyes-on-the-streets/: index.html
docs/methodology/: index.html
outreach/: README.md  google-sheets.json  index.csv  index.md
outreach/posts/: 2026-07-14-help-conspiracy-theories-are-ruining-my-marriage-37-questions-to.json  2026-07-15-we-have-an-obligation-to-help-the-poor.json
research/: README.md  source-index.json
src/str_workflow/: __init__.py  critique.py  critique_batch.py  ingest.py  notifications.py  outreach.py  seo.py  site.py
tests/: test_critique.py  test_critique_batch.py  test_ingest.py  test_outreach.py
tools/: add_challenge_sections.py  build_site_seo.py  build_source_index.py  enforce_moral_nonrealism.py  render_turek_critiques.py
(+179 files in other folders)
